--- a/public/css/app.css
+++ b/public/css/app.css
@@ -69,3 +69,12 @@
   .demo:hover {
     opacity: 1;
   }
+
+  .pestanyaActiva {
+      background-color: rgb(230, 230, 230);
+      border-radius: 3px 3px 0 0;
+  }
+
+  .oculto {
+      display: none;
+  }
