Implementado el anyadido de varias imagenes a una habitacion, anyadiendo la nueva tabla Fotos en la base de datos

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -50,13 +50,12 @@
   
   .galleryRow:after {
     content: "";
-    display: table;
+    display: inline-block;
     clear: both;
   }
   
   /* 6 columnas */
   .galleryColumn {
-    float: left;
     width: 16.66%;
   }
   
