--- a/public/css/app.css
+++ b/public/css/app.css
@@ -71,8 +71,9 @@
   }
 
   .pestanyaActiva {
-      background-color: rgb(230, 230, 230);
+      background-color: rgb(255, 255, 255);
       border-radius: 3px 3px 0 0;
+      box-shadow: 0px -3px 5px rgba(0, 0, 0, 0.1);
   }
 
   .oculto {
